--- a/cluster/apps/default/home-assistant/kustomization.yaml
+++ b/cluster/apps/default/home-assistant/kustomization.yaml
@@ -1,8 +1,15 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: default
 resources:
   - ./helm-release.yaml
   - ./home-assistant-pvc.yaml
-patchesStrategicMerge:
-  - load-balancer.yaml
+# patchesStrategicMerge:
+#   - load-balancer.yaml
+configMapGenerator:
+  - name: voice-assistant-config
+    files:
+      - voice_assistant.py=./voice_assistant.py
+generatorOptions:
+  disableNameSuffixHash: true
