--- a/cluster/apps/games/minecraft/minecraft-paper.yaml
+++ b/cluster/apps/games/minecraft/minecraft-paper.yaml
@@ -48,7 +48,7 @@ spec:
     startupProbe:
       enabled: false
     extraEnv:
-      MODS: "https://github.com/spnda/BlockProt/releases/download/1.2.1/blockprot-spigot-1.2.1-all.jar,https://mediafilez.forgecdn.net/files/5442/792/Dynmap-3.7-beta-6-spigot.jar,https://mediafilez.forgecdn.net/files/3635/984/Dynmap-WorldGuard-1.4-beta-1.jar,https://github.com/EssentialsX/Essentials/releases/download/2.20.1/EssentialsX-2.20.1.jar,https://mediafilez.forgecdn.net/files/5443/866/worldedit-bukkit-7.3.4-beta-01.jar,https://mediafilez.forgecdn.net/files/5477/815/worldguard-bukkit-7.0.11-beta1-dist.jar,https://hub.bg-software.com/job/WildLoaders%20-%20Stable%20Builds/1/artifact/target/WildLoaders-2023.3.jar"
+      MODS: "https://github.com/spnda/BlockProt/releases/download/1.2.1/blockprot-spigot-1.2.1-all.jar,https://mediafilez.forgecdn.net/files/5442/792/Dynmap-3.7-beta-6-spigot.jar,https://mediafilez.forgecdn.net/files/3635/984/Dynmap-WorldGuard-1.4-beta-1.jar,https://github.com/EssentialsX/Essentials/releases/download/2.20.1/EssentialsX-2.20.1.jar,https://mediafilez.forgecdn.net/files/5443/866/worldedit-bukkit-7.3.4-beta-01.jar,https://mediafilez.forgecdn.net/files/5344/377/worldguard-bukkit-7.0.10-dist.jar,https://hub.bg-software.com/job/WildLoaders%20-%20Stable%20Builds/3/artifact/target/WildLoaders-2024.1.jar"
       SPIGET_RESOURCES: "23307,28140,32129,64346,60383"
       TZ: "Ireland/Dublin"
       ENABLE_ROLLING_LOGS: true
@@ -66,17 +66,17 @@ spec:
       metallb.universe.tf/loadBalancerIPs: "${MINECRAFT_PAPER_LB}"
     minecraftServer:
       eula: true
-      version: "1.21"
+      version: "1.20.6"
       type: PAPER
       difficulty: normal
       ops: "bbbiiittt"
       pvp: true
-      motd: "Minecraft 1.21 using Paper"
-      worldSaveName: default
+      motd: "Minecraft 1.20 using Paper"
+      worldSaveName: "1.20.6"
       viewDistance: 16
       forceReDownload: true
       memory: 4096M
-      jvmXXOpts: "-Xms4G -Xmx4G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1"
+      jvmXXOpts: "-Xms4G -Xmx6G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1"
       rcon:
         enabled: true
         existingSecret: minecraft-rcon-credentials
