--- a/cluster/apps/games/minecraft/minecraft-paper.yaml
+++ b/cluster/apps/games/minecraft/minecraft-paper.yaml
@@ -72,7 +72,7 @@ spec:
       ops: "bbbiiittt"
       pvp: true
       motd: "Minecraft 1.20 using Paper"
-      worldSaveName: "1.20.6"
+      worldSaveName: "1.20.6-default"
       viewDistance: 16
       forceReDownload: true
       memory: 4096M
