--- a/cluster/apps/games/minecraft/config-pvc-minecraft-paper.yaml
+++ b/cluster/apps/games/minecraft/config-pvc-minecraft-paper.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: minecraft-paper-data-v2
+  name: minecraft-paper-data-1.20.6
   namespace: games
 spec:
   accessModes:
@@ -15,7 +15,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: minecraft-paper-data-backup-v2
+  name: minecraft-paper-data-backup-1.20.6
   namespace: games
 spec:
   accessModes:
