--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,7 @@ repos:
     hooks:
       - id: remove-crlf
       - id: remove-tabs
+        files: \.yaml$
   - repo: https://github.com/sirosen/texthooks
     rev: 0.4.0
     hooks:
