--- a/cluster/flux/vars/cluster-settings.yaml
+++ b/cluster/flux/vars/cluster-settings.yaml
@@ -14,5 +14,6 @@ data:
   MQTT_LB: 10.0.0.6
   MINECRAFT_PAPER_LB: 10.0.0.7
   HASS_LB: 10.0.0.9
+  ESPHOME_LB: 10.0.0.12
   SATISFACTORY_LB: 10.0.0.10
   PALWORLD_LB: 10.0.0.16
