--- a/cluster/apps/default/esphome/helm-release.yaml
+++ b/cluster/apps/default/esphome/helm-release.yaml
@@ -44,6 +44,7 @@ spec:
             port: 6052
           mdns-lb:
             port: 5353
+            targetPort: 5353
             protocol: UDP
     ingress:
       main:
