Add host network

--- a/cluster/apps/default/esphome/helm-release.yaml
+++ b/cluster/apps/default/esphome/helm-release.yaml
@@ -21,6 +21,7 @@ spec:
     remediation:
       retries: 5
   values:
+    hostNetwork: true
     image:
       repository: esphome/esphome
       tag: latest
