--- a/cluster/apps/games/satisfactory/pvc.yaml
+++ b/cluster/apps/games/satisfactory/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: satisfactory-data
+  name: satisfactory-data-v1
   namespace: games
 spec:
   accessModes:
@@ -16,7 +16,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: satisfactory-gamedata
+  name: satisfactory-gamedata-v1
   namespace: games
 spec:
   accessModes:
