--- a/cluster/apps/default/overseerr/helm-release.yaml
+++ b/cluster/apps/default/overseerr/helm-release.yaml
@@ -36,6 +36,11 @@ spec:
       main:
         enabled: true
         annotations:
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+          hajimari.io/enable: "true"
+          hajimari.io/icon: "overseerr"
         ingressClassName: "nginx"
         hosts:
           - host: &host "overseerr.${SECRET_DOMAIN}"
@@ -44,6 +49,7 @@ spec:
         tls:
           - hosts:
               - *host
+            secretName: "overseerr-tls"
     persistence:
       config:
         enabled: true
