--- a/cluster/apps/kube-system/kustomization.yaml
+++ b/cluster/apps/kube-system/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ./namespace.yaml
   - ./cert-manager
   - ./cloudflare-ddns
+  - ./cloudflared
   - ./external-dns
   - ./ingress-nginx
   - ./k8s-gateway
