--- a/cluster/apps/kube-system/cloudflared/config.yaml
+++ b/cluster/apps/kube-system/cloudflared/config.yaml
@@ -6,7 +6,7 @@ ingress:
   - hostname: sonarr.ashleydeane.me
     service: http://sonarr.home:8989
   - hostname: truenas.ashleydeane.me
-    service: http://truenas.home:8989
+    service: http://freenas.home
   - hostname: sonarr4.ashleydeane.me
     service: http://10.0.0.142:8989
   - service: http_status:404
