--- a/cluster/flux/vars/cluster-settings.yaml
+++ b/cluster/flux/vars/cluster-settings.yaml
@@ -18,3 +18,5 @@ data:
   SATISFACTORY_LB: 10.0.0.10
   PALWORLD_LB: 10.0.0.16
   XTEVE_LB: 10.0.0.13
+  RADARR_LB: 10.0.0.14
+  SONARR_LB: 10.0.0.15
