--- a/cluster/apps/default/sonarr/helm-release.yaml
+++ b/cluster/apps/default/sonarr/helm-release.yaml
@@ -33,16 +33,17 @@ spec:
       main:
         ports:
           http:
+            enabled: true
             port: 8989
-      # lb:
-      #   type: LoadBalancer
-      #   loadBalancerIP: "${SONARR_LB}"
-      #   externalTrafficPolicy: Local
-      #   ports:
-      #     http-lb:
-      #       enabled: true
-      #       port: 8989
-      #       protocol: HTTP
+      lb:
+        type: LoadBalancer
+        loadBalancerIP: "${SONARR_LB}"
+        externalTrafficPolicy: Local
+        ports:
+          http-lb:
+            enabled: true
+            port: 8989
+            protocol: HTTP
     ingress:
       main:
         enabled: true
