--- a/cluster/apps/default/audiobookshelf/config-pvc.yaml
+++ b/cluster/apps/default/audiobookshelf/config-pvc.yaml
@@ -11,3 +11,15 @@ spec:
   resources:
     requests:
       storage: 1Gi
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: audiobookshelf-metadata
+  namespace: default
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-path
+  resources:
+    requests:
+      storage: 1Gi
