--- a/cluster/apps/default/kometa/kustomization.yaml
+++ b/cluster/apps/default/kometa/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - secret.yaml
-  - cronjob.yaml
+  - ./secret.sops.yaml
+  - ./cronjob.yaml
 configMapGenerator:
   - name: kometa-config
     files:
