--- a/cluster/apps/default/kometa/kustomization.yaml
+++ b/cluster/apps/default/kometa/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: default
 resources:
   - ./secret.sops.yaml
   - ./cronjob.yaml
@@ -9,3 +10,5 @@ configMapGenerator:
       - config/config.yml
       - config/metadata.yml
       - config/letterboxd_mi_amor.yml
+generatorOptions:
+  disableNameSuffixHash: true
