--- a/cluster/apps/default/kometa/cronjob.yaml
+++ b/cluster/apps/default/kometa/cronjob.yaml
@@ -13,6 +13,8 @@ spec:
   failedJobsHistoryLimit: 3
   jobTemplate:
     spec:
+      # Add TTL to keep jobs around for 4 hours (14400 seconds) after completion
+      ttlSecondsAfterFinished: 14400
       template:
         spec:
           containers:
