--- a/cluster/apps/default/kometa/cronjob.yaml
+++ b/cluster/apps/default/kometa/cronjob.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     configmap.reloader.stakater.com/reload: "kometa-config"
 spec:
-  schedule: "0 */2 * * *" # Every 2 hours
+  schedule: "*/5 * * * *" # Every 5 minutes
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 3
