--- a/cluster/apps/default/kometa/kustomization.yaml
+++ b/cluster/apps/default/kometa/kustomization.yaml
@@ -8,7 +8,9 @@ configMapGenerator:
   - name: kometa-config
     files:
       - config/config.yml
-      - config/metadata.yml
-      - config/letterboxd_mi_amor.yml
+  - name: kometa-libraries
+    files:
+      - config/libraries/metadata.yml
+      - config/libraries/letterboxd_mi_amor.yml
 generatorOptions:
   disableNameSuffixHash: true
