--- a/cluster/apps/default/kometa/cronjob.yaml
+++ b/cluster/apps/default/kometa/cronjob.yaml
@@ -39,7 +39,7 @@ spec:
                       name: kometa-secrets
                       key: RADARR_API_KEY
               volumeMounts:
-                - name: config-yml
+                - name: config
                   mountPath: /config/config.yml
                   subPath: config.yml
                   readOnly: true
