--- a/cluster/apps/default/kometa/cronjob.yaml
+++ b/cluster/apps/default/kometa/cronjob.yaml
@@ -30,6 +30,9 @@ spec:
                   sed "s|\${TMDB_API_KEY}|$KOMETA_TMDB_API_KEY|g" | \
                   sed "s|\${RADARR_API_KEY}|$KOMETA_RADARR_API_KEY|g" > /writable-config/config.yml
                   echo "Config file prepared with environment variables"
+                  echo "--- BEGIN CONFIG FILE CONTENT ---"
+                  cat /writable-config/config.yml
+                  echo "--- END CONFIG FILE CONTENT ---"
               env:
                 - name: KOMETA_PLEX_TOKEN
                   valueFrom:
@@ -69,6 +72,10 @@ spec:
                 - -c
               args:
                 - |
+                  echo "Verifying config file content:"
+                  cat /config/config.yml
+                  echo ""
+                  echo "Starting Kometa with config file..."
                   python3 kometa.py --read-only-config --config /config/config.yml --run
           restartPolicy: OnFailure
           volumes:
