--- a/cluster/apps/default/kometa/cronjob.yaml
+++ b/cluster/apps/default/kometa/cronjob.yaml
@@ -25,17 +25,21 @@ spec:
                 - /bin/sh
                 - -c
                 - |
-                  cat /readonly-config/config.yml | \
-                  sed "s/\PLEX_TOKEN/$KOMETA_PLEX_TOKEN/g" | \
-                  sed "s/\TMDB_API_KEY/$KOMETA_TMDB_API_KEY/g" | \
-                  sed "s/\RADARR_API_KEY/$KOMETA_RADARR_API_KEY/g" > /writable-config/config.yml
+                  # Create a new config file with variables replaced
+                  cat > /writable-config/config.yml << EOF
+                  $(cat /readonly-config/config.yml | \
+                    sed "s/PLEX_TOKEN/$KOMETA_PLEX_TOKEN/g" | \
+                    sed "s/TMDB_API_KEY/$KOMETA_TMDB_API_KEY/g" | \
+                    sed "s/RADARR_API_KEY/$KOMETA_RADARR_API_KEY/g")
+                  EOF
+
                   echo "Config file prepared with environment variables"
-                  echo "--- BEGIN CONFIG FILE CONTENT ---"
+                  echo "--- BEGIN ORIGINAL CONFIG FILE CONTENT ---"
                   cat /readonly-config/config.yml
-                  echo "--- END CONFIG FILE CONTENT ---"
-                  echo "--- BEGIN CONFIG FILE CONTENT ---"
+                  echo "--- END ORIGINAL CONFIG FILE CONTENT ---"
+                  echo "--- BEGIN MODIFIED CONFIG FILE CONTENT ---"
                   cat /writable-config/config.yml
-                  echo "--- END CONFIG FILE CONTENT ---"
+                  echo "--- END MODIFIED CONFIG FILE CONTENT ---"
               env:
                 - name: KOMETA_PLEX_TOKEN
                   valueFrom:
