--- a/cluster/apps/default/kustomization.yaml
+++ b/cluster/apps/default/kustomization.yaml
@@ -4,7 +4,8 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./hajimari
-  - ./unifi
+  # Disable unifi as it's replaced by ucg ultra
+  # - ./unifi
   - ./jackett
   - ./home-assistant
   - ./zigbee2mqtt
