--- a/cluster/apps/kube-system/cert-manager/issuers/secret.sops.yaml
+++ b/cluster/apps/kube-system/cert-manager/issuers/secret.sops.yaml
@@ -6,6 +6,7 @@ metadata:
     namespace: kube-system
 stringData:
     api-key: ENC[AES256_GCM,data:RsI/2ck+Zrp9ZiAqNpnYrjbv2eiyMJp//ZwAcfGT2f8u50QWAw==,iv:WV1HI8EwMUv7v5l8uan7IBLb+935MUt/MXn/6aGRres=,tag:o1tZsGskiHLC1wUY7/HGOw==,type:str]
+    zone-id: ENC[AES256_GCM,data:LYTTctzQ5fz5egWO28liJyvLAQfxZWpraw+haUEtqHU=,iv:GyrMZUaIGGx/RBUiYQhNlFCDY0GHMPAypObal8DLQu4=,tag:5doI8s4kxiuSZkIOMkn0Og==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             UzNZVVBBS29nYWxRSHgwbVMwdGUxWFkKMzw3JyF4xXf2eqBEeeazBodUTREVJ955
             y3yp/oodpvKRH33SFd9mHdYVZbBkPXH1ctu6M3xfGFwCr1YtNvjvFg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-11T22:44:45Z"
-    mac: ENC[AES256_GCM,data:1exWltuyGFFFGf1rjkQQ8QSVZ0eNAlkRud2JqXOYgYR2OTTlSnU7nywFY2ukPDphFnq/IgLlaWst2TAJNICJTkjP22yQ0HJpGu/ZPbf4OXpK8Dk2QXtn5W10nO05iW8Wz9ZH1o2oAKKgONvOW8CqjCkZuDsTa/5b4iRLQ2qQ3XU=,iv:gPGx50Uyt4lfi9Zuhnf1QsU1gYMqQxgO/NOR/GXWlmE=,tag:b7ubiOVaAtCM+TStWRzY4Q==,type:str]
+    lastmodified: "2025-07-02T21:18:28Z"
+    mac: ENC[AES256_GCM,data:DGWpP+RAV+5+2QYfHlpP7fVgkYTQTQCCfYoNH+v+mjSojhALYX+CfmPz59Y+y3Z04qm9verOyz3BAcmnAGh92M8gMDaItlZzPZvW4cx1jBLuaFIbeuZO/Oeb0WbxZ93Vr5pWtcEYi1nKPwpXsyxRu8hQII2GqD9jhkcRUfbDfd0=,iv:Txm+JyUyFsOuqVr19dWltXmFGSnx1uFm9HvB6sv4I8Y=,tag:gktQs28I1UVXiMUr3wVpGQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.2
+    version: 3.8.1
