--- a/cluster/flux/config/flux-installation.yaml
+++ b/cluster/flux/config/flux-installation.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: flux-installation
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 10m
   ref:
-    tag: v0.37.0
+    tag: v2.4.0
   url: https://github.com/fluxcd/flux2
   ignore: |
     # exclude all
@@ -15,7 +15,7 @@ spec:
     # path to manifests
     !/manifests
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: flux-installation
