--- a/cluster/flux/config/flux-installation.yaml
+++ b/cluster/flux/config/flux-installation.yaml
@@ -15,7 +15,7 @@ spec:
     # path to manifests
     !/manifests
 ---
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: flux-installation
