feat: upgrade flux to v2.4.0 and update all APIs to v1/v2

--- a/cluster/apps/default/jackett/helm-release.yaml
+++ b/cluster/apps/default/jackett/helm-release.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: jackett
@@ -29,7 +29,7 @@ spec:
       replicas: 1
       strategy: RollingUpdate
     env:
-      TZ: 'Ireland/Dublin'
+      TZ: "Ireland/Dublin"
     service:
       main:
         ports:
