--- a/cluster/apps/default/unifi/helm-release.yaml
+++ b/cluster/apps/default/unifi/helm-release.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: unifi
@@ -33,7 +33,7 @@ spec:
       UNIFI_UID: "999"
       UNIFI_GID: "999"
       UNIFI_STDOUT: "true"
-      TZ: 'Ireland/Dublin'
+      TZ: "Ireland/Dublin"
     service:
       main:
         type: LoadBalancer
