Fix ingress of uptime kuma

--- a/cluster/apps/kube-system/uptime-kuma/helm-release.yaml
+++ b/cluster/apps/kube-system/uptime-kuma/helm-release.yaml
@@ -51,7 +51,7 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: "nginx"
+        className: "nginx"
         annotations:
           cert-manager.io/cluster-issuer: "letsencrypt-production"
           external-dns/is-public: "true"
@@ -61,8 +61,11 @@ spec:
           hajimari.io/appName: Uptime-Kuma
         hosts:
           - host: &host "status.${SECRET_DOMAIN}"
-            paths:
-              - path: /
+        paths:
+          - path: /
+            service:
+              identifier: app
+              port: http
         tls:
           - hosts:
               - *host
