Remove xteve and unifi files

--- a/cluster/apps/default/kustomization.yaml
+++ b/cluster/apps/default/kustomization.yaml
@@ -14,7 +14,8 @@ resources:
   - ./piper
   - ./mosquitto
   - ./tautulli
-  - ./xteve
+  # Replace with threadfin when I have time: https://github.com/Threadfin/Threadfin
+  # - ./xteve
   - ./overseerr
   - ./maintainerr
   - ./sonarr
