--- a/cluster/flux/vars/cluster-settings.yaml
+++ b/cluster/flux/vars/cluster-settings.yaml
@@ -13,6 +13,7 @@ data:
   JACKETT_LB: 10.0.0.5
   MQTT_LB: 10.0.0.6
   MINECRAFT_PAPER_LB: 10.0.0.7
+  ADGUARD_LB_IP: 10.0.0.8
   HASS_LB: 10.0.0.9
   ESPHOME_LB: 10.0.0.12
   SATISFACTORY_LB: 10.0.0.10
