--- a/cluster/apps/default/adguard/helm-release.yaml
+++ b/cluster/apps/default/adguard/helm-release.yaml
@@ -35,24 +35,37 @@ spec:
             probes:
               liveness:
                 enabled: true
+                custom: true
                 spec:
                   httpGet:
                     path: /
                     port: 3000
+                  initialDelaySeconds: 3
+                  periodSeconds: 3
+                  timeoutSeconds: 5
+                  failureThreshold: 3
               readiness:
                 enabled: true
+                custom: true
                 spec:
                   httpGet:
                     path: /
                     port: 3000
+                  initialDelaySeconds: 3
+                  periodSeconds: 3
+                  timeoutSeconds: 5
+                  failureThreshold: 3
               startup:
                 enabled: true
+                custom: true
                 spec:
                   httpGet:
                     path: /
                     port: 3000
-                  failureThreshold: 30
-                  periodSeconds: 5
+                  initialDelaySeconds: 3
+                  periodSeconds: 3
+                  timeoutSeconds: 5
+                  failureThreshold: 3
     service:
       main:
         controller: main
