--- a/cluster/apps/default/adguard/config-pvc.yaml
+++ b/cluster/apps/default/adguard/config-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: adguard-config
+  name: adguard-config-v2
   namespace: default
 spec:
   accessModes:
