--- a/cluster/apps/default/adguard/data-pvc.yaml
+++ b/cluster/apps/default/adguard/data-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: adguard-data
+  name: adguard-data-v2
   namespace: default
 spec:
   accessModes:
