--- a/cluster/apps/default/adguard/helm-release.yaml
+++ b/cluster/apps/default/adguard/helm-release.yaml
@@ -69,16 +69,20 @@ spec:
     service:
       main:
         controller: main
-        ports:
-          http:
-            port: 3000
-            protocol: HTTP
-      dns:
-        controller: main
         type: LoadBalancer
         loadBalancerIP: "${ADGUARD_LB_IP}"
         externalTrafficPolicy: Local
         ports:
+          initial:
+            enabled: true
+            port: 3000
+            protocol: TCP
+            targetPort: 3000
+          http:
+            enabled: true
+            port: 80
+            protocol: TCP
+            targetPort: 80
           dns-tcp:
             enabled: true
             port: 53
@@ -89,33 +93,14 @@ spec:
             port: 53
             protocol: UDP
             targetPort: 53
-    ingress:
-      main:
-        enabled: true
-        className: nginx
-        annotations:
-          external-dns.alpha.kubernetes.io/target: "ipv4.ashleydeane.me"
-          external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
-          cert-manager.io/cluster-issuer: "letsencrypt-production"
-        hosts:
-          - host: &host "adguard.ashleydeane.me"
-            paths:
-              - path: /
-                service:
-                  identifier: main
-                  port: http
-        tls:
-          - hosts:
-              - *host
-            secretName: adguard-tls
     persistence:
       config:
         enabled: true
-        existingClaim: adguard-config
+        existingClaim: adguard-config-v2
         globalMounts:
           - path: /opt/adguardhome/conf
       data:
         enabled: true
-        existingClaim: adguard-data
+        existingClaim: adguard-data-v2
         globalMounts:
           - path: /opt/adguardhome/work
