Add minecraft create

--- a/cluster/apps/games/minecraft/secret.sops.yaml
+++ b/cluster/apps/games/minecraft/secret.sops.yaml
@@ -6,6 +6,7 @@ metadata:
     namespace: games
 stringData:
     rcon-password: ENC[AES256_GCM,data:0P50vEdXF5eguk1V,iv:7lGYs/lxp+6Igfmf6iHBPSaWp6dLaVvgTR60GOlH17s=,tag:kW36KUIHERrRrAhpxnyi+g==,type:str]
+    CF_API_KEY: ENC[AES256_GCM,data:+JfyhcvgHb4gUEzd3VFKKlmC/Pt38j8isNzZVXp+RsQj0b8FwMHj4FksNfRLRFz283zXZf4K/+L2H4Vw,iv:hXWLuPqOZbbUGYivIQqIU6p1vf/PQPvTgKExv0+xYfM=,tag:5N/dJXjE/1oG34bhqDEpuw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             cUl5QXFwSG85bUtkUFk4aEpBdFNMQmcKur8KveEMTc/MRrvGPTWMjQaIQ4w2lCOt
             jKenjsnnhDJAKd4xI0ng+LK0LeGN19r3xAUdOzRlNqIgLB0iKcdVmQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-28T13:05:32Z"
-    mac: ENC[AES256_GCM,data:dxdU7H8kpLqwGSBNX1dQKTXsV4Lstt+F51rV2dVTTqm/yw7KLcsJFMGYY+FefVaCJmSHZDy/gnj913g0he/Se99G3JToaT+E49lmbL2Uw1vZdYREcqk/S/RVEAYeIV3BQcw160R2uWBDkAEDErXy1Fpdq9W8GIPydo7cJ5CWRU4=,iv:ieiMuxLjGP7ityDEFBt+5JWrPPY5vKM5Wt6wlXSweBM=,tag:sgQ+FArw5TPjbAptbGnn9g==,type:str]
+    lastmodified: "2025-08-01T23:52:30Z"
+    mac: ENC[AES256_GCM,data:uLQs9NO8xKr0juxiDi5GvJydLPSHaYQ02A19oXJIyXgvIM5Ljs4VINGDYEVE97KlvYuH3OMadiVzI8PzemlAcWRLibDosateCjKl1wDVoneRC+JzPtcEoIjebb204uCaXhUhM35Q8ncBZyJz9bBfK+M7dh9ViimSfe12d1YnyPs=,iv:m7sJd+sPA4+cIyz/VtA6cqB21PvTMEMD0RFZeTgwfWA=,tag:LrFWrGybNKS73Ty3pTXPWw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.1
