--- a/cluster/flux/vars/cluster-settings.yaml
+++ b/cluster/flux/vars/cluster-settings.yaml
@@ -16,7 +16,7 @@ data:
   ADGUARD_LB_IP: 10.0.0.8
   HASS_LB: 10.0.0.9
   ESPHOME_LB: 10.0.0.12
-  SATISFACTORY_LB: 10.0.0.10
+  MINECRAFT_CREATE_LB: 10.0.0.10
   PALWORLD_LB: 10.0.0.16
   XTEVE_LB: 10.0.0.13
   RADARR_LB: 10.0.0.14
