--- a/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
+++ b/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
@@ -12,7 +12,7 @@ spec:
       # renovate: registryUrl=https://itzg.github.io/minecraft-server-charts/
       # https://github.com/itzg/minecraft-server-charts/tree/master/charts/minecraft
       chart: minecraft
-      version: 4.19.0
+      version: 4.26.4.0
       sourceRef:
         kind: HelmRepository
         name: minecraft-server-charts
@@ -72,7 +72,7 @@ spec:
     minecraftServer:
       eula: true
       version: "1.20.1"
-      type: NEOFORGE
+      type: FORGE
       difficulty: normal
       ops: "bbbiiittt"
       pvp: true
