Correctly set forge config

--- a/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
+++ b/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
@@ -32,13 +32,6 @@ spec:
     image:
       repository: itzg/minecraft-server
       tag: 2025.6.2
-    env:
-      TYPE: AUTO_CURSEFORGE
-      CF_SLUG: create-ultimate-selection
-      CF_FILE_ID: 6829587
-    envFrom:
-      - secretRef:
-          name: minecraft-rcon-credentials
     resources:
       limits:
         memory: 8Gi
@@ -72,7 +65,7 @@ spec:
     minecraftServer:
       eula: true
       version: "1.20.1"
-      type: FORGE
+      type: AUTO_CURSEFORGE
       difficulty: normal
       ops: "bbbiiittt"
       pvp: true
@@ -81,6 +74,12 @@ spec:
       forceReDownload: true
       memory: 4096M
       jvmXXOpts: "-Xms4G -Xmx6G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1"
+      autoCurseForge:
+        apiKey:
+          existingSecret: minecraft-rcon-credentials
+          secretKey: CF_API_KEY
+        slug: create-ultimate-selection
+        fileId: 6829587
       rcon:
         enabled: true
         existingSecret: minecraft-rcon-credentials
