--- a/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
+++ b/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
@@ -79,7 +79,7 @@ spec:
           existingSecret: minecraft-rcon-credentials
           secretKey: CF_API_KEY
         slug: create-ultimate-selection
-        fileId: 6829587
+        fileId: "6829587"
       rcon:
         enabled: true
         existingSecret: minecraft-rcon-credentials
