--- a/cluster/apps/games/minecraft/kustomization.yaml
+++ b/cluster/apps/games/minecraft/kustomization.yaml
@@ -4,7 +4,10 @@ resources:
   - config-pvc-minecraft-paper.yaml
   - minecraft-paper.yaml
   - rcon-web-admin.yaml
-  # - config-pvc-minecraft-create.yaml
+  # Fix it by create a volume / share in freenas with the mods, using something like https://docker-minecraft-server.readthedocs.io/en/latest/types-and-platforms/mod-platforms/auto-curseforge/#manual-downloads
+  # might be handy to use freenas for the backup volume as well
+  - config-pvc-minecraft-create.yaml
+  - create-downloads-pvc.yaml
   - minecraft-neoForge-create.yaml
   - rcon-web-admin-create.yaml
   - secret.sops.yaml
