--- a/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
+++ b/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
@@ -54,6 +54,10 @@ spec:
       dataDir:
         enabled: true
         existingClaim: minecraft-create-data-1.20.1
+      create-downloads:
+        enabled: true
+        existingClaim: create-downloads
+        mountPath: /downloads
     mcbackup:
       enabled: true
       persistence:
